src/test/ui/const-generics/issues/issue-62456.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-62456.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: constant expression depends on a generic parameter
  --> $DIR/issue-62456.rs:5:20
   |
LL |     let _ = [0u64; N + 1];
   |                    ^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error; 1 warning emitted

